# Sentinel-RAG

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/docs/: supabase_schema.sql
backend/src/sentinel_rag/: __init__.py  config.py  sandbox.py
backend/src/sentinel_rag/agents/: agent_service.py
backend/src/sentinel_rag/api/: __init__.py  server.py
backend/src/sentinel_rag/scanners/: __init__.py  checkov_scanner.py  command_runner.py  models.py  tflint_scanner.py
backend/src/sentinel_rag/store/: __init__.py  supabase_store.py
backend/src/sentinel_rag/tools/: file_tools.py  patch_editor.py  scan_tool.py
backend/src/sentinel_rag/workflows/: propose_cli.py
frontend/: monaco-basic-languages.d.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: DiffViewer.tsx  VscodeEditor.tsx
