[project]
name = "sentinel-rag"
version = "0.1.0"
description = "Sentinel-RAG agent harness for Terraform autofix"
readme = "README.md"
requires-python = ">=3.10"
# install: pip install openai-agents  # or `uv add openai-agents`, etc
dependencies = [
  "openai-agents",
  "supabase>=2.6.0",
  "python-dotenv>=1.0.1",
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "checkov>=3.2.0",
]

[project.optional-dependencies]
cli = [
  "typer>=0.12",
]

test = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
